<resources>
    <string name="app_name">万华互联大厦</string>
    <string name="open_drawer">打开抽屉</string>
    <string name="close_drawer">关闭抽屉</string>
    <string name="login">登录</string>
    <string name="logon_mima">请输入密码</string>
    <string name="login_account">请输入账号</string>
    <string name="setting_par">参数配置</string>
    <string name="back">返回</string>
    <string name="query">查询</string>
    <string name="activate">激活</string>
    <string name="company_name">Copyright © 1993-2017 Suntrans. All rights reserved.</string>
    <string name="copyright">Copyright © 2017 广州三川智控工程装备有限公司版权所有</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="forgot_password">忘记密码</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="search">搜索</string>
    <string name="main_devices_">配置</string>
    <string name="sockets">插座</string>
    <string name="zhaoming">照明</string>
</resources>
