<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="用户登录"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="50dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <com.suntrans.lanzhouwh.views.EditView
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/account"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:textColorHint="#f1f1f1"
            android:textSize="14sp" />
        <!--</android.support.design.widget.TextInputLayout>-->


        <com.suntrans.lanzhouwh.views.EditView
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:textColorHint="#f1f1f1"
            android:textSize="14sp" />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/ll"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_bt_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            skin:enable="true" />
    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:id="@+id/login_text"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_below="@+id/login"-->
        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:visibility="invisible">-->

        <!--<TextView-->
            <!--android:id="@+id/forget"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center|left"-->
            <!--android:text="@string/forgot_password"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--tools:ignore="RelativeOverlap,RtlHardcoded" />-->

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center|right"-->
            <!--android:text="新用户注册"-->
            <!--android:textColor="@color/colorPrimary" />-->
    <!--</LinearLayout>-->
</LinearLayout>
